gitTestProject/src/objects/Address__c.object
<CustomObject>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <externalId>true</externalId>
        <label>Name</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number__c</fullName>
        <externalId>true</externalId>
        <label>Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>currency__c</fullName>
        <label>currency</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>fg__c</fullName>
        <formula>Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>fg</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>first_chechbox__c</fullName>
        <defaultValue>false</defaultValue>
        <label>first chechbox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>multi_select_picklist__c</fullName>
        <label>multi select picklist</label>
        <picklist>
            <picklistValues>
                <fullName>a</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>c</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>d</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>e</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>n1__c</fullName>
        <inlineHelpText>This is field n1</inlineHelpText>
        <label>n1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>n2__c</fullName>
        <inlineHelpText>This is field n2</inlineHelpText>
        <label>n2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>n3__c</fullName>
        <inlineHelpText>This is field n3</inlineHelpText>
        <label>n3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>password__c</fullName>
        <label>password</label>
        <length>10</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <label>Address</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Country</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Address</pluralLabel>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>State_Validate</fullName>
        <active>true</active>
        <errorConditionFormula>LEN( State__c )  = 2
 &amp;&amp;  
 VLOOKUP( $ObjectType.CountryState__c.Fields.Country__c ,
  $ObjectType.CountryState__c.Fields.Name , 
   State__c )   &lt;&gt;  Name</errorConditionFormula>
        <errorDisplayField>State__c</errorDisplayField>
        <errorMessage>Enter Valid State</errorMessage>
    </validationRules>
</CustomObject>